--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
             <h2 class="experience-sub-title project-title">Placement Management system</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.figma.com/proto/3Gooq6i5FgTmBeTQSP4gx0/Untitled?node-id=5-4&t=JyhSSNiWAMEIFzJu-1'">Prototype</button>
+              <!-- <button style="margin-top: 0.75rem;" class="btn btn-color-2 project-btn" onclick="window.open('./assets/assets/Tnp-research-paper.pdf')">Research</button> -->
               <button style="margin-top: 0.75rem;" class="btn btn-color-2 project-btn" onclick="window.open('./assets/assets/Tnp-research-paper.pdf')">Research</button>
             </div>
           </div>
