changes made in experience

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     
     <style>
       .dropdown-icon {
-        margin-left: 5px; /* Adjust spacing between text and icon */
+        margin-left: 5px; 
       }
     </style>
     
@@ -228,8 +228,8 @@
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience">
-          <h2>Experience 1</h2>
-          <div class="role-name">Role Name: Developer</div>
+          <h2>Cognizant Technology Solutions Corp.</h2>
+          <div class="role-name">Role Name: CSD stage 1 Intern</div>
           <div class="skills">
               <div class="skill">HTML</div>
               <div class="skill">CSS</div>
@@ -241,106 +241,16 @@
       </div>
 
       <div class="experience">
-          <h2>Experience 2</h2>
-          <div class="role-name">Role Name: Designer</div>
+          <h2>Tathastu (TwoWaits)</h2>
+          <div class="role-name">Role Name: Web Development Intern</div>
           <div class="skills">
               <div class="skill">HTML</div>
               <div class="skill">CSS</div>
               <div class="skill">JavaScript</div>
-              <div class="skill">Java</div>
               <div class="skill">Bootstrap</div>
-              <div class="skill">SQL</div>
           </div>
       </div>
   </section>
-
-    <!-- <section id="experience">
-      <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="experience-sub-title">Cognizant Technology Solutions Corp.</h2>
-            <h3>CSD Stage 1 Intern (2024)</h3>
-            <div class="article-container">
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>Bootstrap</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>CSS</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>JavaScript</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>Core JAVA</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>SQL</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>OOP</h3>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Tathastu (TwoWaits) </h2> 
-            <h3>Web Development Intern (2021)</h3>
-            <div class="article-container">
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>HTML</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>CSS</h3>
-                </div>
-              </article> -->
-              <!-- <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>JavaScript</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>HTML</h3>
-                </div>
-              </article>
-              <article>
-                <img src="./assets/assets/checkmark.png" alt="experience" class="icon" />
-                <div>
-                  <h3>Bootstrap</h3>
-                </div>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
-      <img src="./assets/assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#projects'" />
-    </section> -->
 
     <!-- Projects Section -->
     <section id="projects">
